# conversational-ai-playground

./: README.md  cloudbuild.yaml
.github/workflows/: deploy.yml
server/: .env.example  Dockerfile.cloudrun  bot.py  pcc-deploy.toml  pyproject.toml
server/templates/: client.html
