[project]
name = "conversational-ai-playground"
version = "0.1.0"
description = "Playground for businesses to trial conversational AI agents - swap LLM/STT/TTS providers, languages, and voices, with real cost/latency/token metrics"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[anthropic,cartesia,deepgram,openai,runner,silero,webrtc,google,sarvam,groq]>=1.4.0",
    "pipecatcloud",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]